--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
     <string name="app_name">CarRentalMVVM</string>
     <string name="log_in">Log In</string>
-    <string name="continue_with_google">Continue With Google</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="continue_with_facebook">Continue With Facebook</string>
+    <string name="sign_in">SIGN IN</string>
+    <string name="have_an_account_already">Have an account Already?</string>
+    <string name="password">PASSWORD</string>
+    <string name="loremipsum_gmail_com">Loremipsum@gmail.com</string>
+    <string name="email_or_phone">EMAIL OR PHONE</string>
+    <string name="lorem_ipsum">Lorem Ipsum</string>
+    <string name="full_name">FULL NAME</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="don_t_have_an_account_yet">Don’t Have an account yet?</string>
+    <string name="forgot_password">Forgot password?</string>
 </resources>
