--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="username_cannot_empty">Cannot be empty</string>
     <string name="username_letters_and_numbers">Can only contain letters and numbers</string>
     <string name="username_between_8_20_characters_long">Must be between 8–20 characters long</string>
+    <string name="full_name_error">Only characters from a-z or A-Z are allowed</string>
     <string name="password_cannot_empty">Password cannot be empty</string>
     <string name="password_characters">Password contains invalid characters</string>
     <string name="password_between_8_20_characters_long">Password must be between 8–20 characters long</string>
