--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="have_an_account_already">Have an account Already?</string>
     <string name="password">PASSWORD</string>
     <string name="loremipsum_gmail_com">Loremipsum@gmail.com</string>
-    <string name="email_or_phone">EMAIL OR PHONE</string>
+    <string name="username">USERNAME</string>
     <string name="lorem_ipsum">Lorem Ipsum</string>
     <string name="full_name">FULL NAME</string>
     <string name="sign_up">Sign Up</string>
