--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">CarRentalMVVM</string>
-    <string name="log_in">Log In</string>
+    <string name="submit">Submit</string>
     <string name="sign_in">SIGN IN</string>
     <string name="have_an_account_already">Have an account Already?</string>
     <string name="password">PASSWORD</string>
