--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="please_enter">Please enter your username and password</string>
     <string name="login_successful">Login successful</string>
     <string name="login_failed">Login failed</string>
+    <string name="day">/day</string>
 
 </resources>
