create displaying message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="please_enter">Please enter your username and password</string>
     <string name="register_successful">Register successful</string>
     <string name="username_already">Username already exists</string>
+    <string name="username_exist"> The username does not exist</string>
+    <string name="password_wrong">Enter the wrong password</string>
     <string name="is_empty">Please fill in all fields</string>
     <string name="login_failed">Login failed</string>
     <string name="day">/day</string>
