--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,11 @@
     <string name="is_empty">Please fill in all fields</string>
     <string name="login_failed">Login failed</string>
     <string name="day">/day</string>
+    <string name="lamborghini">Lamborghini</string>
+    <string name="ferrari">Ferrari</string>
+    <string name="roll_royce">Roll Royce Ghost</string>
+    <string name="exciter">Exciter</string>
+    <string name="all">All</string>
     <string name="transition">Transition</string>
     <string name="automatic">Automatic</string>
     <string name="seats">Seats</string>
