--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,15 +33,35 @@
     <string name="is_empty">Please fill in all fields</string>
     <string name="login_failed">Login failed</string>
     <string name="day">/day</string>
-    <string name="lamborghini">Lamborghini</string>
-    <string name="ferrari">Ferrari</string>
-    <string name="roll_royce">Roll Royce Ghost</string>
-    <string name="exciter">Exciter</string>
     <string name="all">All</string>
     <string name="car_type">Car Type</string>
     <string name="automatic">Automatic</string>
     <string name="seats">Seats</string>
     <string name="render">RENDER</string>
     <string name="book_now">BOOK NOW</string>
+    <string name="select_date_and_location">Please select date and location before booking</string>
+    <string name="select_location">Please select a location</string>
+    <string name="select_start_end_date">Please select a start and end date</string>
+    <string name="select_quantity">Please select quantity</string>
+    <string name="start">Start</string>
+    <string name="date">Date</string>
+    <string name="end">End</string>
+    <string name="needs_a_driver">Needs a driver</string>
+    <string name="selected">Selected:</string>
+    <string name="days">Days:</string>
+    <string name="price">Price:</string>
+    <string name="drivers_fee">Drivers Fee:</string>
+    <string name="total">TOTAL</string>
+    <string name="location">LOCATION</string>
+    <string name="confirm">Confirm</string>
+    <string name="selected_payment">Selected</string>
+    <string name="rated">Rated:</string>
+    <string name="thanks_payment">Well done Your payment is Successfuly done \nand your car is on its way.</string>
+    <string name="payment_made">PAYMENT MADE</string>
+    <string name="track">Track</string>
+    <string name="go_back">Go Back</string>
+    <string name="start_end_date_same">The start and end dates cannot be the same</string>
+
+
 
 </resources>
