--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,12 @@
     <string name="track">Track</string>
     <string name="go_back">Go Back</string>
     <string name="start_end_date_same">The start and end dates cannot be the same</string>
-
+    <string name="my_profile">My Profile</string>
+    <string name="settings">Settings</string>
+    <string name="log_out">Log Out</string>
+    <string name="notification">Notification</string>
+    <string name="privacy">Privacy</string>
+    <string name="help_info">Help &amp; Info</string>
 
 
 </resources>
