--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,5 @@
     <string name="continue_with_google">Continue With Google</string>
     <string name="or">OR</string>
     <string name="default_web_client_id">909729442915-dsj4o20us49ufo04jccnfu6pkd2tqu1g.apps.googleusercontent.com</string>
+    <string name="my_booking">My Booking</string>
 </resources>
